tests/pass/ArithLeftShiftAssign.java
package pass;

public class ArithLeftShiftAssign {

	public int arithLeftShiftAssign(int x, int y) {
		int t = x;
		t <<= y;
		return t;
	}
}
