tests/fail/ArithLeftShiftAssign.java
package fail;

public class ArithLeftShiftAssign {
	
	public static void main(String[] args) {
		int t = 3;
		t <<= "a";
	}	
}
